--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 spring.thymeleaf.suffix=.html
