--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/library
-spring.datasource.username=root
+spring.datasource.username=library
 spring.datasource.password=pass
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
