--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.thymeleaf.suffix=.html
 logging.level.root = debug
