--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
             <artifactId>json-flattener</artifactId>
             <version>0.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
