--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.thymeleaf.suffix=.html
 logging.level.root = debug
+server.port = 80
